--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "clang-format>=19.1.6",
     "isort>=5.13.2",
     "pip>=24.3.1",
+    "pyflyby>=1.9.10",
     "pynvim>=0.5.2",
     "ruff>=0.8.5",
     "yamlfix>=1.17.0",
