--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,12 @@ description = "Virtual environment for neovim configuration"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "beautysh>=6.2.1",
-    "black>=24.10.0",
-    "clang-format>=19.1.6",
-    "isort>=5.13.2",
-    "pip>=24.3.1",
-    "pyflyby>=1.9.10",
-    "pynvim>=0.5.2",
-    "ruff>=0.8.5",
-    "yamlfix>=1.17.0",
+    "beautysh==6.2.1",
+    "black==24.10.0",
+    "clang-format==19.1.6",
+    "isort==5.13.2",
+    "pip==24.3.1",
+    "pynvim==0.5.2",
+    "ruff==0.8.5",
+    "yamlfix==1.17.0",
 ]
